# UAS-Topik-Khusus

backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: lifespan.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/endpoints/: activity_logs.py  auth.py  bookings.py  dashboards.py  health.py  rooms.py  root.py
backend/app/cache/: client.py  invalidation.py  keys.py
backend/app/core/: config.py  constants.py  error_handlers.py  exceptions.py  logging.py  security.py
backend/app/database/: indexes.py  mongodb.py  redis.py
backend/app/middleware/: access_log.py  request_id.py
backend/app/repositories/: activity_log_repository.py  booking_repository.py  refresh_token_repository.py  room_repository.py  user_repository.py
backend/app/schemas/: activity_log.py  auth.py  booking.py  common.py  dashboard.py  health.py  room.py  user.py
backend/app/services/: activity_log_service.py  auth_service.py  booking_service.py  dashboard_service.py  room_service.py  user_service.py
backend/app/tests/: conftest.py
backend/app/tests/integration/: test_activity_logs.py  test_admin_bookings.py  test_admin_rooms.py  (+6 more)
backend/app/utils/: datetime.py  object_id.py  pagination.py  slug.py  uploads.py
backend/documentation/: API_DOCUMENTATION.md  FRONTEND_BACKEND_INTEGRATION.md  PRD_BACKEND_SISTEM_PEMINJAMAN_RUANGAN_MAHASISWA.md
backend/scripts/: create_indexes.py  seed_admin.py  seed_all.py  seed_rooms.py  seed_students_and_bookings.py
(+116 files in other folders)
