[project]
name = "roomify-backend"
version = "0.1.0"
description = "Backend API for the Roomify room booking system"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.139.1",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "PyJWT==2.13.0",
  "pymongo==4.17.0",
  "pwdlib[argon2]==0.3.0",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.20",
  "redis==8.0.1",
  "structlog==26.1.0",
  "uv==0.11.29",
  "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
